# LeNetApproach

./: CMakeLists.txt  Icon.h  ImgShow.h  LICENSE  LeNet.cpp  LeNet.h  Makefile  Object.h  README.md  main.32.rc  main.64.rc  main.cpp
File/: LabelDataType.cpp  LabelDataType.h
Folder/: LabelPathType.cpp  LabelPathType.h
Loader/: ILoader.h  Loader.cpp  Loader.h
Processor/: DummyProcessor.cpp  DummyProcessor.h  IProcessor.h
